1.2.1 (SVN/unreleased)
======================

1.2
===

 * Added compression for CSS and Javascript resources.
   [fschulze]

 * Added better labels and a short explanation to the debugmode-checkbox in the forms. 
   [elvix]

 * Renamed 'TAL condition' to 'Condition' in the forms, as it has nothing to do with 
   TAL at all (it is a CMF/TALES expression) It should include a link to CMF Expressions help
   [elvix]

1.1
===

 * Fixed cooking of resources to ensure that uncookable resources are not merged.
   [elro]

 * Fixed tests for unauthorized to accept a 401 as an unauthorized error.
   [elro]

 * Fixed setDebugMode to recook resources after being changed.
   [elro]

1.1b1
=====

 * Added checkbox to configure cacheability of resources.
   [fschulze]

 * Made registries cacheable. This is most useful with the RAMCacheManager.
   Just associate portal_css and portal_javascripts with the RAMCache.
   [fschulze]

 * Apply magic id to all resources when not in debug mode, so invalidation
   works.
   [fschulze]

 * Made skin aware. This now depends on getCurrentSkinName added in  CMF 1.5.5.
   [elro]

1.0.5
=====

 * Fixed encoding of javascripts.
   [fschulze]

1.0.4
=====

 * Fixed reordering of resources with javascript.
   [fschulze]

1.0.3
=====

 * Fixed typo in the migration external method which lead to portal_javascripts
   not being migrated.
   [fschulze]

 * Small fixes to UI.
   [limi]

1.0.2
=====

 * Fix for bug #4392, where merging FSfiles could mess up http-status headers
   and cause weird hanging in browsers.
   [plonista][fschulze][elvix] 

1.0.1
=====

 * Don't filter resources in merged overview in ZMI.
   [fschulze]

 * Improved management UI.
   [limi, fschulze]

 * Fixed reinstall bug due to improper resource id lookup.
   [alecm]

1.0
===

 * Moved directory with skin layer for Plone 2.0.5 compatibility to product
   root, so it doesn't interfere with Plone 2.1. The version check on install
   time didn't seem to be enough.
   [fschulze]
